domain/src/main/java/com/example/domain/core/error/DataStoreFailure.kt
package com.example.domain.core.error

sealed class DataStoreFailure : Failure {

    object IOFailure : DataStoreFailure()

    object UnknownFailure : DataStoreFailure()
}